# asymptotic-speedup-via-effect-handlers-code-jfp

./: Dockerfile  Makefile  README.md  benchmarks.opam  dune-project
data/: integration.id.csv  integration.logistic.csv  integration.square.csv  queens.all.csv  queens.one.csv
lib/: bench.ml  dune  generic_search.ml  integration.ml  queens.ml  time2.ml
results/: integration.id.xlsx  integration.logistic.xlsx  integration.square.xlsx  queens.all.xlsx  queens.one.xlsx
